# fnml-translator

./: CITATION.cff  README.md  pyproject.toml
example/: RML-Views_projection_selection.ttl
examples/: R2RML-Views_composite_projection.ttl.ttl  R2RML-Views_projection_selection.ttl  RML-FNML_composite_projection.ttl  RML-FNML_projection_selection.ttl  RML-Views_composite_projection.ttl.ttl
src/rml_fnml_translator/: __init__.py  __main__.py  args_parser.py
src/rml_fnml_translator/mapping/: mapping_parser.py
