[build-system]
requires = ['hatchling>=1.11.0']
build-backend = 'hatchling.build'

[project]
name = 'rml_fnml_translator'
authors = [
  {name = 'Julián Arenas-Guerrero', email = 'julian.arenas.guerrero@upm.es'}
]
license = 'Apache-2.0'
requires-python = '>=3.7'
version = '0.1.0'
dependencies = [
  'pandas==1.5.3',
  'rdflib==7.0.0',
]
